[package]
name = "concurrent-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"


[[bin]]
name = "example"
path = "bin/example_fork_join.rs"

[dependencies]
futures = { version = "0.3.28", features = ["async-await"] }
futures-util = { version = "0.3.30", features = ["sink"] }
kanal = "0.1.0-pre8"
pin-project-lite = "0.2.14"
tokio = { version = "1.38.0", features = ["full"] }
monoio = { version = "0.2.4-beta.0", features = ["sync"] }
rayon = "1.7.0"
dyn-clone = "1.0.17"
rclite = "0.2.4"
downcast = "0.11.0"